--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 </head>
 <body>
 
-    <h1>Titol 1</h1>
-    <h2>Paragraf</h2>
-    <p>Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de 
-        tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final.
-        Aunque no posee actualmente fuentes para justificar sus hipótesis, el profesor de filología 
-        clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del siglo XVI.
-        Su uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum 
-        nueva popularidad.</p>
+    <h1>Noticies IticBcn</h1>
+    <p>Un estudiant del centre educatiu ITICBCN de Barcelona ha fet història amb la invenció del primer telèfon volador del món.
+         Segons ha informat el mateix centre, el jove, que només té 17 anys, ha creat un dispositiu que no només permet fer trucades
+          i enviar missatges, sinó que també és capaç de levitar i moure's a través de l'aire gràcies a un sistema de propulsió 
+          d'última generació. Els experts ja consideren que aquest invent podria revolucionar la manera en què ens comuniquem i 
+          transportem petits objectes en el futur. El projecte ha despertat gran interès en el món de la tecnologia i les 
+          grans empreses ja s'hi estan fixant.</p>
     <img src="./imagenes/BatPollo.png" alt="BatPollo">
     
     <h3>Llista Desordenada</h3>
