--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
     <h1>Noticies IticBcn</h1>
+    <h2>Inveció Mobil del Futur</h2>
     <p>Un estudiant del centre educatiu ITICBCN de Barcelona ha fet història amb la invenció del primer telèfon volador del món.
          Segons ha informat el mateix centre, el jove, que només té 17 anys, ha creat un dispositiu que no només permet fer trucades
           i enviar missatges, sinó que també és capaç de levitar i moure's a través de l'aire gràcies a un sistema de propulsió 
